<resources>
    <string name="app_name">my Fit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gym">Gym</string>
    <string name="menu_food">Food</string>
    <string name="menu_log">Log Progress</string>
    <string name="menu_diary">Diary</string>
    <string name="menu_progress">Progress</string>
    <string name="menu_title">Menu</string>
    <string name="weight">Weight</string>
    <string name="strength">Strength</string>
    <string name="diet">Diet</string>
    <string name="progress_fragment">Progress Fragment</string>

    <string-array name="log_array">
        <item>Gym</item>
        <item>Food</item>
        <item>Activity</item>
    </string-array>
</resources>