<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_log"
        android:name="com.example.myfit.ui.log.LogFragment"
        android:label="@string/menu_log"
        tools:layout="@layout/fragment_log" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myfit.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gym"
        android:name="com.example.myfit.ui.gym.GymFragment"
        android:label="@string/menu_gym"
        tools:layout="@layout/fragment_gym" />

    <fragment
        android:id="@+id/nav_food"
        android:name="com.example.myfit.ui.food.FoodFragment"
        android:label="@string/menu_food"
        tools:layout="@layout/fragment_food" />

    <fragment
        android:id="@+id/nav_diary"
        android:name="com.example.myfit.ui.diary.DiaryFragment"
        android:label="@string/menu_diary"
        tools:layout="@layout/fragment_diary" />

    <fragment
        android:id="@+id/nav_progress"
        android:name="com.example.myfit.ui.progress.ProgressFragment"
        android:label="@string/menu_progress"
        tools:layout="@layout/fragment_progress" />
</navigation>